--- a/FIGMA/layout/leeddeok.html
+++ b/FIGMA/layout/leeddeok.html
@@ -8,39 +8,39 @@
     <title>이낙근찹쌀떡</title>
 </head>
 <body>
+    <!-- 1. 상단 헤더 및 아이콘 -->
     <div id="header">
-        <h1><a href="./leeddeok.html">이낙근 찹쌀떡</a></h1>
         <div class="left_menu">
             <a href="#">좌측메뉴</a>
-                <div class="menu_open">메뉴창
-                    <div class="buy">
-                        <a href="#">전체상품</a>
-                        <a href="#">찹쌀떡 세트</a>
-                        <a href="#">선물세트</a>
-                        <a href="#">정기구독</a>
-                        <a href="#">베이커리</a>
-                    </div>
-                    <div class="intro">
-                        <a href="#">이낙근찹쌀떡</a>
-                        <a href="#">이낙근명장</a>
-                        <a href="#">제품라인</a>
-                        <a href="#">매장안내</a>
-                    </div>
-                    <div class="notice">
-                        <a href="#">공지사항</a>
-                        <a href="#">이벤트</a>
-                        <a href="#">리뷰</a>
-                    </div>
-                    <div class="help">
-                        <a href="#">FAQ</a>
-                        <a href="#">1대1문의</a>
-                        <a href="#">Q&A</a>
-                        <a href="#">대량구매문의</a>
-                    </div>
-                </div>
+            <div class="menu_open">메뉴창</div>
         </div>
-        <a href="#">마이메뉴</a>
-        <a href="#">장바구니</a>
+        <h1><a href="./leeddeok.html">이낙근 찹쌀떡</a></h1>
+        <div class="user_menu">
+            <a href="#" class="my_menu">마이메뉴</a>
+            <a href="#" class="cart">장바구니</a>
+        </div>
+    </div>
+    <!-- 2. 본문 및 이미지 -->
+    <div id="main">
+        <!-- 2-1 소개 -->
+        <div class="intro">
+            <!-- 이미지 -->
+            <h1>반세기 손맛,<br>
+            대한민국 명장의 혼을 담다</h1>
+            <p class="introducing_text">
+            대한민국 제과 명장의 이름, 이낙근찹쌀떡 51년 외길,<br>
+            오직 정직한 재료와 이낙근 장인의 손길로 빚어온<br>
+            시간의 깊이입니다. 한결같은 정성으로 지켜온 대한민국<br>
+            대표 찹쌀떡의 그 깊은 자부심을 당신께 전합니다.
+            </p>
+        </div>
+        <!-- 2-2 찹쌀떡 종류 소개 -->
+        <!-- 2-3 이낙근의 약속 -->
+        <!-- 2-4 이낙근 51년 -->
+        <!-- 2-5 찹쌀떡 구입 -->
+        <!-- 2-6 찹쌀떡 인기상품 -->
+        <!-- 2-7 찹쌀떡 후기 -->
+        <!-- 2-8 지점소개 -->
     </div>
 </body>
 </html>
