--- a/FIGMA/layout/soopsori.html
+++ b/FIGMA/layout/soopsori.html
@@ -26,5 +26,89 @@
             </div>
         </div>
     </div>
+    <!-- 내용시작 -->
+    <div id="main">
+        <!-- 이미지 -->
+        <div id="banner"></div>
+        <!-- best -->
+        <div class="best">
+            <h1>best</h1>
+            <div class="guard_bed">
+                <h2><a href="#">Guard bed</a></h2>
+                <!-- 이미지 -->
+                <h3>POMIO Guard Bed Swing Door</h3>
+                <h4>포미오 가드침대 스윙도어</h4>
+                <p><a href="#">View more</a></p>
+            </div>
+            <div class="Bumper_bed">
+                <h2><a href="#">Bumper_bed</a></h2>
+                <!-- 이미지 -->
+                <h3>ARUNI Bumper Bed SS 4 sided</h3>
+                <h4>아루니 범퍼침대 SS 4면형</h4>
+                <p><a href="#">View more</a></p>
+            </div>
+            <div class="Furniture">
+                <h2><a href="#">Furniture</a></h2>
+                <!-- 이미지 -->
+                <h3>MARON toddler desk & chair </h3>
+                <h4>마론 유아 책상의자 세트</h4>
+                <p><a href="#">View more</a></p>
+            </div>
+        </div>
+        <!-- Only for you -->
+        <div id="only_for_you">
+            <div class="category">
+                <div class="showcase">
+                    <a href="#">첫인사 SHOWCASE</a>
+                    <div class="murchandise"><!-- 스윙도어 -->
+                        <a href="#">포미오 가드침대 스윙도어형</a>
+                        <!-- 세이프도어 -->
+                        <a href="#">포미오 가드침대 세이프도어형</a>
+                        <!-- 4면형 -->
+                        <a href="#">아루니 범퍼침대 SS 4면형</a>
+                        <!-- 패밀리 -->
+                        <a href="#">아루니 범퍼침대 패밀리형 (SS+Q)</a></div>
+                </div>
+                <div class="module">
+                    <a href="#">성장에 따라 모듈형 가구</a>
+                    <!-- 스윙도어 -->
+                    <a href="#">포미오 가드침대 스윙도어형</a>
+                    <!-- 세이프도어 -->
+                    <a href="#">포미오 가드침대 세이프도어형</a>
+                    <!-- 4면형 -->
+                    <a href="#">아루니 범퍼침대 SS 4면형</a>
+                    <!-- 패밀리 -->
+                    <a href="#">아루니 범퍼침대 패밀리형 (SS+Q)</a>
+                </div>
+            </div>
+        </div>
+        <!-- sellection -->
+        <!-- Ad -->
+        <!-- magazine -->
+        <!-- store -->
+        <!-- swith soopsosi -->
+    </div>
+    <div id="footer">
+        <div class="company">
+            <a href="https://m.soopsori.co.kr/">soopsori Logo</a>
+            <h2>고객센터<a href="#">02-335-4482</a></h2>
+            <h3>고객센터 운영시간 안내</h3>
+            <p>평일 10:00 - 17:00  |  점심시간 : 12:00 - 13:00<br>
+            주말 및 공휴일은 휴무입니다.</p>
+            <p>상호 : 주식회사숲소리 | 대표 : 한상교<br>
+            개인정보 보호 책임자 : 김혜영 | TEL : 02-335-4482<br>
+            FAX : 02-335-4483 | E-MAIL : info@soopsori.com<br>
+            사업자등록번호 : 110-81-81105<br>
+            통신판매업신고 : 제 2023-서울마포-1631 <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=110-81-81105">[사업자정보확인]</a><br>
+            본사 : 서울특별시 마포구 독막로 291-3 1,2층<br>
+            물류센터 : 경기도 파주시 검산로 290-50(검산동) </p>
+            <div class="Service_rules">
+                <a href="https://m.soopsori.co.kr/service/agreement.php">서비스 이용약관</a>
+                <a href="https://m.soopsori.co.kr/service/private.php">개인정보처리방침</a>
+                <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=110-81-81105">사업자정보확인</a>
+            </div>
+            <p>Copyright ⓒ Soopsori, All rights reserved.</p>
+        </div>
+    </div>
 </body>
 </html>
