--- a/FIGMA/layout/soopsori.html
+++ b/FIGMA/layout/soopsori.html
@@ -91,23 +91,31 @@
     <div id="footer">
         <div class="company">
             <a href="https://m.soopsori.co.kr/">soopsori Logo</a>
-            <h2>고객센터<a href="#">02-335-4482</a></h2>
-            <h3>고객센터 운영시간 안내</h3>
-            <p>평일 10:00 - 17:00  |  점심시간 : 12:00 - 13:00<br>
-            주말 및 공휴일은 휴무입니다.</p>
-            <p>상호 : 주식회사숲소리 | 대표 : 한상교<br>
+            <p class="cs_center1">
+            고객센터<a href="#"><em>02-335-4482</em></a></p>
+            <strong>고객센터 운영시간 안내</strong>
+            <p class="cs_center2">
+            평일 10:00 - 17:00  |  점심시간 : 12:00 - 13:00<br>
+            주말 및 공휴일은 휴무입니다.
+            </p>
+            <address>상호 : 주식회사숲소리 | 대표 : 한상교<br>
             개인정보 보호 책임자 : 김혜영 | TEL : 02-335-4482<br>
             FAX : 02-335-4483 | E-MAIL : info@soopsori.com<br>
             사업자등록번호 : 110-81-81105<br>
             통신판매업신고 : 제 2023-서울마포-1631 <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=110-81-81105">[사업자정보확인]</a><br>
             본사 : 서울특별시 마포구 독막로 291-3 1,2층<br>
-            물류센터 : 경기도 파주시 검산로 290-50(검산동) </p>
+            물류센터 : 경기도 파주시 검산로 290-50(검산동)
+            </address>
             <div class="Service_rules">
                 <a href="https://m.soopsori.co.kr/service/agreement.php">서비스 이용약관</a>
                 <a href="https://m.soopsori.co.kr/service/private.php">개인정보처리방침</a>
                 <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=110-81-81105">사업자정보확인</a>
             </div>
             <p>Copyright ⓒ Soopsori, All rights reserved.</p>
+            <div class="sns">
+                <a href="#">blog</a>
+                <a href="#">instagram</a>
+            </div>
         </div>
     </div>
 </body>
