--- a/FIGMA/layout/ohou_product.html
+++ b/FIGMA/layout/ohou_product.html
@@ -28,14 +28,89 @@
                 </ul>
                 <div class="big_img"><img src="#" alt="상품 큰 이미지"></div>
             </div>
+            <!-- 우측 상품정보 -->
             <div class="info">
-                <p><a href="#">LG전자</a></p>
+                <!-- 상품명 -->
+                <p><a href="#" class="brand_name">LG전자</a></p>
                 <div class="product_name">
-                    <h1>LG노트북 16ZD90RU-GX56K 16GB/512GB/WIN11홈</h1>
+                    <h1>LG노트북 16ZD90RU-GX56K
+                    16GB/512GB/WIN11홈</h1>
+                    <!-- 아이콘 -->
                     <div class="icon">
-                        <a href="#"></a><img src="#" alt="즐겨찾기 아이콘"></a>
-                        <a href="#"><img src="#" alt="공유"></a>
+                        <a href="#"><img src="#" alt="관심상품 등록"></a>
+                        <a href="#"><img src="#" alt="공유하기"></a>
                     </div>
+                </div>
+                <!-- 리뷰 -->
+                    <a href="#" class="review_score">
+                        <span class="score">
+                            <img src="#" alt="1점">
+                            <img src="#" alt="2점">
+                            <img src="#" alt="3점">
+                            <img src="#" alt="4점">
+                            <img src="#" alt="5점">
+                        </span>
+                        <span>8개 리뷰</span>
+                    </a>
+                <!-- 가격정보 -->
+                <div class="price">
+                    <p class="before">
+                        1% <del>1,700,000원</del>
+                        <span>
+                            <!-- 가격정보 / 클릭 시 open 실행 -->
+                            <a href="#"><img src="icon" alt="상품 이전 정가"></a>
+                            <span>
+                                <p> 상품 등록일을 기준으로 판매자가 제공하는
+                                    권장소비자 가격(도서등인 경우 정가) 또는
+                                    기타 온라인 채널 판매 가격 등으로,
+                                    할인 기준이 되는 가격입니다.
+                                </p>
+                            </span>
+                        </span>
+                    </p>
+                    <div class="discount_price">
+                        <strong>1,679,000</strong><span>원</span>
+                        <img src="#" alt="오늘출발">
+                    </div>
+                </div>
+                <!-- 혜택 -->
+                <dl class="benefit_and_delivery"><!-- dl-혜택  -->
+                    <dt class="benefit">혜택</dt>
+                    <dd><strong>1,679P</strong>적립 (WELCOME 0.1% 적립)</dd>
+                    <dd>
+                        <a href="#">월 279,933원 (6개월) 무이자할부</a>
+                        <div class="plan"><h2>무이자 할부 안내</h2></div>
+                    </dd>
+                    <dt class="delivery">배송</dt>
+                    <dd><strong>무료배송</strong></dd>
+                    <dd>16:00 까지 결제 시
+                        <strong>오늘출발</strong>
+                        <a href=""><img src="#" alt="오늘출발에 대한 설명"></a>
+                        <ul class="msg">
+                            <li>· 판매자가 '오늘출발'을 약속한 상품입니다.</li>
+                            <li>· 오늘출발 마감시간 전에 결제 완료시, 판매자가 상품을 당일 발송합니다.(무통장 입금의 경우, 입금시점 기준)</li>
+                            <li>· 판매자와 택배사 사정으로 배송지연이 발생할 수 있습니다.</li>
+                        </ul>
+                    </dd>
+                    <dd>일반택배</dd>
+                    <dd>제주도/도서산간 지역 8,000원</dd>
+                </dl>
+                <hr>
+                <!-- 브랜드정보 -->
+                <div class="brand-info">
+                    <a href="#">
+                        <p><img src="" alt=""></p>
+                        <div class="details">
+                            <h2>LG전자<img src="#" alt="화살표"></h2>
+                            <p>브랜드</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <img src="#" alt="관심 브랜드 등록">
+                    </a>
+                </div>
+                <div class="banner">
+                    <a href=""><img src="#" alt="여기에만 있는 단독 추천템 확인하기"></a>
                 </div>
             </div>
         </div>
