--- a/figma_layout/styles/reset.css
+++ b/figma_layout/styles/reset.css
@@ -8,11 +8,11 @@ table,thead,tbody,tfoot,tr,td,th {
     margin:0; padding:0; box-sizing:border-box;
     line-height:1; letter-spacing:-0.02em; word-spacing:0;
     font-size:1em; font-weight:400; font-style:normal;
-    color:#000;
-    font-family:'Noto Sans KR',sans-serif;
+    /* color:#000; 전체 기본글자색을 #000이 아닌 다른색으로 지정하고 싶을 때*/
+    font-family:'Noto Sans KR', '맑은 고딕', sans-serif;
 }
 /* 개별 태그 초기값 */
-a {text-decoration:none;}
+a {text-decoration:none; color: #000;}
 ul,ol,li {list-style:none;}
 fieldset {border:0;}
 legend {display:none;}
