--- a/figma_layout/form/style/spotify_login.css
+++ b/figma_layout/form/style/spotify_login.css
@@ -93,7 +93,11 @@ body #login_wrap .sign_in_contents #sign_in_frm .login_status label {color: #fff
 body #login_wrap .sign_in_contents #sign_in_frm .btn_forget {} /* 패스워드 잊음 버튼 */
 body #login_wrap .sign_in_contents #sign_in_frm .btn_forget #sign_in_btn {
     color: #fff;
-    background-color: #1ED760; width: 100%; padding: 28.5px 0 ;
+    background-color: #1ED760;
+    display: block;
+    width: 100%; height: 73px;
+    font-weight: 700;
+    padding: 28.5px 0 ;
     border-radius: 36.5px;
     margin: 0 0 14px 0;
 } /* 로그인 버튼 */
