--- a/task/styles/musescore_login.css
+++ b/task/styles/musescore_login.css
@@ -1,12 +1,11 @@
 /* Log in to Musescore */
 body {
-    background-color: black;
+    background-color: #fff;
 }
 
 #wrap {
-    background-color: white;
+    background-color: #fff;
     width: 320px;
-    padding-top: 24px;
     margin: 0 auto;
     color: #180036;
 }
@@ -14,12 +13,16 @@ body {
 /* header */
 #wrap #title {margin-bottom: 24px;
 }
+
 #wrap #title h1 {
     font-weight: 600;
     font-size: 2.125rem;
-    margin-bottom: 4px}
+    margin-bottom: 4px;
+    text-align: center;}
+
 #wrap #title p {
     font-size: 0.875rem;
+    text-align: center;
 }
 #wrap #title p a {
     color: #6b5dfe;
@@ -41,6 +44,7 @@ body {
 #wrap #sns a img {
     width: 30px;
     height: 30px;
+    text-align: left;
 } /* class icon */
 
 #wrap #sns a .icon {} /* class icon */
@@ -64,6 +68,7 @@ body {
     font-weight: 500;
     font-size: 0.875rem;
     color: #fff;
+    padding: 0 8px;
     margin-bottom:21px;
     transform: translateY(-10px);
     display: inline-block;
@@ -114,11 +119,26 @@ body {
     margin-bottom: 4px;
 } /* dl title */
 #wrap #login_frm dl dt a {} /* dl find password link */
-#wrap #login_frm dl dt a span{} /* forgot password */
-#wrap #login_frm dl dd {} /* dl data */
-#wrap #login_frm dl dd #email {} /* dl email */
+#wrap #login_frm dl dt a span{
+    float:right;
+    color: #6B5DFE;
+} /* forgot password */
+#wrap #login_frm dl dd {
+    
+} /* dl data */
+#wrap #login_frm dl dd #email {
+} /* dl email */
 #wrap #login_frm dl dd #pw {} /* dl pw */
-#wrap #login_frm dl dd #input_de {
-    border:1px solid #A7A5A9;
+#wrap #login_frm dl dd input {
+    width: 100%;
+    padding: 12px 16px;
+    border: 1px solid #A7A5A9;
+    margin-bottom: 16px;
 } /* dl input */
-#wrap #login_frm dl #login_btn {} /* dl */
+#wrap #login_frm dl #login_btn {
+    font-size: 0.875rem;
+    width: 100%;
+    height: 40px;
+    background: #E7E5E8;
+    border-radius: 20px;
+} /* dl */
